complete restaurant details and list and reviews

--- a/restaurant-client/app/home/css/home.css
+++ b/restaurant-client/app/home/css/home.css
@@ -96,7 +96,8 @@
 .profile-card {
     background-color: #222222;
   margin-bottom: 20px;
-            
+    height: 250px;
+    cursor: pointer;
  }
         
 .profile-pic {
@@ -137,7 +138,7 @@
      color: #4CB493;
         }
 .profile-info i {
-        padding: 15px 35px 0px 35px;
+        /*padding: 15px 35px 0px 35px;*/
         }
         
 
@@ -217,3 +218,5 @@
     width: 500px !important; 
     padding: 18px !important;
 }
+
+
