add explicit search in client side

--- a/restaurant-client/app/home/css/home.css
+++ b/restaurant-client/app/home/css/home.css
@@ -220,3 +220,7 @@
 }
 
 
+.btn-success, .btn-success:hover, .btn-success:active, .btn-success:visited {
+    background-color: #f60 !important;
+    border-color: #f60;
+}
