--- a/restaurant-client/app/restaurant-details/css/restaurant-details.css
+++ b/restaurant-client/app/restaurant-details/css/restaurant-details.css
@@ -14,3 +14,8 @@
 .review-section{
 	margin-bottom: 15px;
 }
+
+.btn-success, .btn-success:hover, .btn-success:active, .btn-success:visited {
+    background-color: #f60 !important;
+    border-color: #f60;
+}
